--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Flask Starter</title>
+  <title>RETAPPD</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/badf2172b9.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="theme">
   <div id="root"></div>
 </body>
 
